# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml  sonar-project.properties  tox.ini
.github/workflows/: pyci.yml
gendiff/: cli.py  diff_builder.py  generator.py  parsers.py
gendiff/formatters/: json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_files.py
tests/test_data/: expected_output_json.txt  expected_output_stylish.txt
