[project]
name = "hexlet-code"
version = "0.1.0"
description = "A command-line utility that compares two configuration files and shows the difference. Supports JSON and YAML files with three output formats: stylish, plain, and JSON."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.2",
    "tox>=4.25.0",
    "black>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[tool.uv.dependency-groups.dev]
dependencies = [
    "black>=25.1.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
]

[tool.coverage.run]
branch = "true"
source = ["gendiff"]
relative_files = "true"